@@ -146,7 +146,7 @@ BEGIN {
     SKIP: {
         if ($^O eq 'amigaos' || $^O eq 'os2' || $^O eq 'MSWin32' ||
             $^O eq 'NetWare' || $^O eq 'dos' || $^O eq 'cygwin'  ||
-            $^O eq 'MacOS'
+            $^O eq 'MacOS' || $^O eq 'vos'
            ) {
             skip( "different file permission semantics on $^O", 5);
         }
